@@ -162,6 +162,13 @@ http {
              -- timeout = 1000
              -- timeout = { connect = 500, send = 1000, read = 1000 }
 
+             --use_nonce = false
+             -- By default the authorization request includes the
+             -- nonce paramter. You can use this option to disable it
+             -- which may be necessary when talking to a broken OpenID
+             -- Connect provider that ignores the paramter as the
+             -- id_token will be rejected otherwise.
+
              -- Optional : use outgoing proxy to the OpenID Connect provider endpoints with the proxy_opts table : 
              -- this requires lua-resty-http >= 0.12
              -- proxy_opts = {
