@@ -1,3 +1,6 @@
+09/15/2019
+- add an option to disable nonce parameter for broken OpenID Connect providers
+
 09/06/2018
 - bypass introspection cache on demand with introspection_cache_ignore; thanks @dmitriyblok
 
